--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.7.0",
+    "firebase": "^10.5.0",
     "next": "^13.5.4",
     "next-auth": "^4.23.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "sass": "^1.69.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.9.3",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.5.4",
     "postcss": "^8.4.27",
